--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "author": "Bjørge Næss <bjoerge@origo.no>",
   "name": "jquery",
   "description": "jQuery for node.js",
-  "version": "1.7.1",
+  "version": "1.7.2",
   "repository": {
     "url": "http://github.com/bjoerge/jquery-node"
   },
@@ -15,5 +15,7 @@
     "location": "0.0.1",
     "navigator": "1.0.1",
     "xmlhttprequest": "1.3.0"
-  }
+  },
+  "devDependencies": {},
+  "optionalDependencies": {}
 }
