--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "main": "jquery.js",
   "engines": {
-    "node": "~0.6.10"
+    "node": "*"
   },
   "dependencies": {
     "jsdom": "0.2.10",
