--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "author": "Bjørge Næss <bjoerge@origo.no>",
+  "author": "Bjørge Næss <bjoerge@bengler.no>",
   "name": "jquery",
   "description": "jQuery for node.js",
   "version": "1.7.2",
@@ -11,11 +11,12 @@
     "node": "*"
   },
   "dependencies": {
-    "jsdom": "0.2.10",
-    "location": "0.0.1",
-    "navigator": "1.0.1",
-    "xmlhttprequest": "1.3.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "jsdom": "latest",
+    "location": "latest",
+    "navigator": "latest",
+    "xmlhttprequest": "latest"    
+  },
   "optionalDependencies": {}
 }
