--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "author": "Bjørge Næss <bjoerge@bengler.no>",
   "name": "jquery",
-  "description": "jQuery for node.js",
-  "version": "1.8.0",
+  "description": "jQuery for Node.js",
+  "version": "1.9.0",
   "repository": {
     "url": "http://github.com/bjoerge/jquery-node"
   },
